--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://grasinoleg.github.io/goit-react-hw-04-images-4-4-4/",
+  "homepage": "https://rasinoleg.github.io/goit-react-hw-04-images-4-4-4/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3"
   },
